// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/git-submodules/artifact updateArtifacts() returns empty content 1`] = `
[
  {
    "file": {
      "contents": "",
      "path": "",
      "type": "addition",
    },
  },
]
`;

exports[`modules/manager/git-submodules/artifact updateArtifacts() returns two modules 1`] = `
[
  {
    "file": {
      "contents": "",
      "path": "renovate",
      "type": "addition",
    },
  },
  {
    "file": {
      "contents": "",
      "path": "renovate-pro",
      "type": "addition",
    },
  },
]
`;
